[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envoxyd"
version = "0.5.20"
description = "Customized uWSGI server for Envoxy"
requires-python = ">=3.12"
authors = [
    { name = "Matheus (vorjdux) Santos", email = "vorj.dux@gmail.com" },
    { name = "Laoska Guadamuz", email = "laoska@benyasca.com" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta",
]

dependencies = ["envoxy>=0.6.20", "flask-cors==6.0.1", "isort==7.0.0"]

[project.urls]
Homepage = "https://github.com/habitio/envoxy"

[project.scripts]
envoxyd = "envoxyd.tools.envoxyd_wrapper:main"

[tool.setuptools]
# Disable automatic license file inclusion
license-files = []
